# Cataclysm-DDA

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: release.yml
CMakeModules/: GetGitRevisionDescription.cmake  Packaging.cmake
build-scripts/: MINGW.cmake
data/: CMakeLists.txt
doc/COMPILING/: COMPILING-CMAKE.md
lang/: CMakeLists.txt
src/: CMakeLists.txt  character.cpp
tools/format/: CMakeLists.txt
